Finalitzat exercici colors

--- a/04_CSS/Colors/exercici_colors.html
+++ b/04_CSS/Colors/exercici_colors.html
@@ -11,6 +11,12 @@
     <div class="vermell"></div>
     <div class="verd"></div>
     <div class="blau"></div>
+    <div></div>
+    <div id="float" class="vermell pos-1">
+        <div id="float" class="verd pos-3">
+            <div id="float" class="blau pos-2"></div>
+        </div>
+    </div>
     <div class="text">Colors Secundaris</div>
     <div class="vermell"></div>
     <div id="simbol">+</div>
@@ -29,5 +35,6 @@
     <div class="vermell"></div>
     <div id="simbol">=</div>
     <div class="groc"></div>
+    
 </body>
 </html>
