--- a/Querys/exercici_querys_2.html
+++ b/Querys/exercici_querys_2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,20 +8,20 @@
 </head>
 <body>
     <header>
-        <div class="color-1"></div>
-        <div class="color-1"></div>
+        <div id="float5" class="color-1"></div>
+        <div id="float6" class="color-1"></div>
     </header>
     <main>
-        <div class="color-2"></div>
-        <div class="color-3"></div>
-        <div class="color-3"></div>
-        <div class="color-3"></div>
+        <div id="float7" class="color-2"></div>
+        <div id="float8" class="color-3"></div>
+        <div id="float9" class="color-3"></div>
+        <div id="float10" class="color-3"></div>
     </main>
     <footer>
-        <div id="f1" class="color-4"></div>
-        <div id="f2" class="color-4"></div>
-        <div id="f3" class="color-4"></div>
-        <div id="f4" class="color-4"></div>
+        <div id="float1" class="color-4"></div>
+        <div id="float2" class="color-4"></div>
+        <div id="float3" class="color-4"></div>
+        <div id="float4" class="color-4"></div>
     </footer>
 </body>
 </html>
