--- a/04_CSS/Clon-Spotify/index.html
+++ b/04_CSS/Clon-Spotify/index.html
@@ -27,10 +27,13 @@
   </header>
   <main>
     <div class="cont-2">
-      <img class="concert" src="./images/landing.jpg" alt="Concert">
-      <h1 class="title-1">Music for everyone.</h1>
-      <p class="box-1">Spotify is now free on mobile, tablet and computer. </p>
-      <p class="box-2">Listen to the right music, wherever you are.</p>
+      
+      <div>
+        <h1 class="title-1">Music for everyone.</h1>
+        <p class="box-1">Spotify is now free on mobile, tablet and computer.</p>
+        <p class="box-2">Listen to the right music, wherever you are.</p>
+      </div>
+        
     </div>
   </main>
 </body>
