--- a/04_CSS/Clon-Spotify/index.html
+++ b/04_CSS/Clon-Spotify/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<!--Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-      right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
+<html lang="es">
+<!--Millions of Songs There are millions of songs on Spotify HD Music
       Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
       It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
       latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
@@ -27,13 +26,13 @@
   </header>
   <main>
     <div class="cont-2">
-      
-      <div>
-        <h1 class="title-1">Music for everyone.</h1>
-        <p class="box-1">Spotify is now free on mobile, tablet and computer.</p>
-        <p class="box-2">Listen to the right music, wherever you are.</p>
-      </div>
-        
+      <h1 class="title-1">Music for everyone.</h1>
+      <p class="box-1">Spotify is now free on mobile, tablet and computer.</p>
+      <p class="box-2">Listen to the right music, wherever you are.</p>
+    </div>
+    <h2 class="box-3">What’s on Spotify?</h2>
+    <div class="cont-3">
+
     </div>
   </main>
 </body>
