Maquieta base del clon spotify

--- a/04_CSS/Clon-Spotify/index.html
+++ b/04_CSS/Clon-Spotify/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-<!--Millions of Songs There are millions of songs on Spotify HD Music
-      Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-      It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-      latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-      own personal playlist. Or sit back and enjoy Radio. -->
 
 <head>
   <meta charset="UTF-8" />
@@ -30,9 +25,43 @@
       <p class="box-1">Spotify is now free on mobile, tablet and computer.</p>
       <p class="box-2">Listen to the right music, wherever you are.</p>
     </div>
-    <h2 class="box-3">What’s on Spotify?</h2>
     <div class="cont-3">
-
+      <h2 class="box-3">What’s on Spotify?</h2>
+    </div>
+    <div class="cont-4">
+      <div class="box">
+        <img class="dibuix" src="./images/music-icon.png" alt="Imatge volum">
+        <p class="nom">Millions of Songs</p>
+        <p class="text">There are millions of<br> songs on Spotify</p>
+      </div>
+      <div class="box">
+        <img class="dibuix" src="./images/high-quality-icon.png" alt="Musica de qualitat">
+        <p class="nom">HD Music</p>
+        <p class="text">Listen to music as if you<br> were listening live</p>
+      </div>
+      <div class="box">
+        <img class="dibuix" src="./images/devices-icon.png" alt="Diferents dispositius">
+        <p class="nom">Stream Everywhere</p>
+        <p class="text">Stream music on your<br> smartphone, tablet or computer</p>
+      </div>
+    </div>
+    <div class="cont-5">
+      <div class="cont-6">
+        <h2 class="title-2">It’s as yeezy as Kanye West.</h2>
+        <h3 class="nom-b">Search</h3>
+        <p class="text-b">Know what you want to listen to?<br> Just search and hit play.</p>
+        <h3 class="nom-b">Browse</h3>
+        <p class="text-b">Check out thelatest charts,<br> brand new releases and great<br> playlists for right now.</p>
+        <h3 class="nom-b">Discover</h3>
+        <p class="text-b">Enjoy new music every Monday<br> with your own personal playlist.<br> Or sit back and enjoy
+          Radio</p>
+      </div>
+      <div>
+        <img class="logoB" src="./images/spotify-icon-white.png" alt="Logo de Spotify en blanc">
+      </div>
+      <div>
+        <img class="app" src="./images/spotify-app.jpg" alt="Vista de l'aplicació per mòbils">
+      </div>
     </div>
   </main>
 </body>
