Clon spotify fet

--- a/04_CSS/Clon-Spotify/index.html
+++ b/04_CSS/Clon-Spotify/index.html
@@ -12,11 +12,11 @@
 <body>
   <header class="cont-1">
     <img class="logoS" src="./images/spotify-logo.png" alt="Logo de Spotify">
-    <nav>
-      <a class="enllaç" href="">Premium</a>
-      <a class="enllaç" href="">Discover</a>
-      <a class="enllaç" href="">Help</a>
-      <a class="enllaç" href="">Download</a>
+    <nav class="nav">
+      <a id="pos-1" class="enllaç" href="">Premium</a>
+      <a id="pos-2" class="enllaç" href="">Discover</a>
+      <a id="pos-3" class="enllaç" href="">Help</a>
+      <a id="pos-4" class="enllaç" href="">Download</a>
     </nav>
   </header>
   <main>
