Revisio final clon spotify i exercicis grid

--- a/04_CSS/Clon-Spotify/index.html
+++ b/04_CSS/Clon-Spotify/index.html
@@ -10,59 +10,52 @@
 </head>
 
 <body>
-  <header class="cont-1">
-    <img class="logoS" src="./images/spotify-logo.png" alt="Logo de Spotify">
-    <nav class="nav">
-      <a id="pos-1" class="enllaç" href="">Premium</a>
-      <a id="pos-2" class="enllaç" href="">Discover</a>
-      <a id="pos-3" class="enllaç" href="">Help</a>
-      <a id="pos-4" class="enllaç" href="">Download</a>
+  <header>
+    <img id="logo" src="./images/spotify-logo.png" alt="">
+    <nav>
+      <a href="">Premium</a>
+      <a href="">Discover</a>
+      <a href="">Help</a>
+      <a href="">Download</a>
     </nav>
   </header>
   <main>
-    <div class="cont-2">
-      <h1 class="title-1">Music for everyone.</h1>
-      <p class="box-1">Spotify is now free on mobile, tablet and computer.</p>
-      <p class="box-2">Listen to the right music, wherever you are.</p>
-    </div>
-    <div class="cont-3">
-      <h2 class="box-3">What’s on Spotify?</h2>
-    </div>
-    <div class="cont-4">
-      <div class="box">
-        <img class="dibuix" src="./images/music-icon.png" alt="Imatge volum">
-        <p class="nom">Millions of Songs</p>
-        <p class="text">There are millions of<br> songs on Spotify</p>
-      </div>
-      <div class="box">
-        <img class="dibuix" src="./images/high-quality-icon.png" alt="Musica de qualitat">
-        <p class="nom">HD Music</p>
-        <p class="text">Listen to music as if you<br> were listening live</p>
-      </div>
-      <div class="box">
-        <img class="dibuix" src="./images/devices-icon.png" alt="Diferents dispositius">
-        <p class="nom">Stream Everywhere</p>
-        <p class="text">Stream music on your<br> smartphone, tablet or computer</p>
-      </div>
-    </div>
-    <div class="cont-5">
-      <div class="cont-6">
-        <h2 class="title-2">It’s as yeezy as Kanye West.</h2>
-        <h3 class="nom-b">Search</h3>
-        <p class="text-b">Know what you want to listen to?<br> Just search and hit play.</p>
-        <h3 class="nom-b">Browse</h3>
-        <p class="text-b">Check out thelatest charts,<br> brand new releases and great<br> playlists for right now.</p>
-        <h3 class="nom-b">Discover</h3>
-        <p class="text-b">Enjoy new music every Monday<br> with your own personal playlist.<br> Or sit back and enjoy
+    <section class="concert">
+      <h1>Music for everyone.</h1>
+      <p>Spotify is now free on mobile, tablet and computer. Listen to the right music, wherever you are.</p>
+    </section>
+    <h2>What's on Spotify?</h2>
+    <section class="cartes">
+      <article class="subcarta">
+        <img src="./images/music-icon.png" alt="">
+        <h3>Millions of Songs</h3>
+        <p>There are millions of songs on Spotify</p>
+      </article>
+      <article class="subcarta">
+        <img src="./images/high-quality-icon.png" alt="">
+        <h3>HD Music</h3>
+        <p>Listen to music as if you were listening live</p>
+      </article>
+      <article class="subcarta">
+        <img src="./images/devices-icon.png" alt="">
+        <h3>Stream Everywhere</h3>
+        <p>Stream music on your smartphone, tablet or computer</p>
+      </article>
+    </section>
+    <section class="box">
+      <article>
+        <h3>It’s as yeezy as Kanye West.</h3>
+        <h4>Search</h4>
+        <p>Know what you want to listen to? Just search and hit play.</p>
+        <h4>Browse</h4>
+        <p>Check out thelatest charts, brand new releases and great playlists for right now.</p>
+        <h4>Dsicover</h4>
+        <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy
           Radio</p>
-      </div>
-      <div>
-        <img class="logoB" src="./images/spotify-icon-white.png" alt="Logo de Spotify en blanc">
-      </div>
-      <div>
-        <img class="app" src="./images/spotify-app.jpg" alt="Vista de l'aplicació per mòbils">
-      </div>
-    </div>
+      </article>
+      <img id="logo2" src="./images/spotify-icon-white.png" alt="">
+      <img id="app" src="./images/spotify-app.jpg" alt="">
+    </section>
   </main>
 </body>
 
