--- a/04_CSS/Grid/exercici_grid.html
+++ b/04_CSS/Grid/exercici_grid.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercici Grid</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    
+    <h2 class="box head">HEAD</h2>
+    <h2 class="box menu">MENU</h2>
+    <h2 class="box hero">HERO</h2>
+    <h2 class="box main">MAIN</h2>
+    <h2 class="box banner">BANNER</h2>
+    <h2 class="box extra">EXTRA</h2>
+    <h2 class="box image">IMAGE</h2>
 </body>
+
 </html>
