--- a/04_CSS/Lab-CSS/starter-code/index.html
+++ b/04_CSS/Lab-CSS/starter-code/index.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>CSS Lab | Responsive Cloning | Product Hunt</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <section class="first-bar">
-        <img class="logo" src="./images/logo.png" alt="">
-        <article class="search-bar">
-          <img src="./images/search.png" alt="">
-          <div class="search-box">Discover your next facorite thing...</div>
-        </article>
-        <article class="login-box">
-          <div>...</div>
-          <div>Login</div>
-        </article>
-      </section>
-      <nav>
-        <article>Home</article>
-        <article>Tech</article>
-        <article>Games</article>
-        <article>Podcasts</article>
-        <article>Books</article>
-        <article>Bots</article>
-        <article>Developer Tools</article>
-        <article>iMessage Apps</article>
-        <article>iPhone</article>
-        <article>Photograpy Tools</article>
-        <img src="./images/arrow-prev.png" alt="">
-        <img src="./images/arrow-next.png" alt="">
-      </nav>
-    </header>
-    <main></main>
-    <footer></footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>CSS Lab | Responsive Cloning | Product Hunt</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <header>
+    <section class="conth conth-1">
+      <img id="logo" class="boxh" src="./images/logo.png" alt="">
+      <article class="boxh boxh-1">
+        <img src="./images/search.png" alt="">
+        <div>Discover your next facorite thing...</div>
+      </article>
+      <article class="boxh boxh-2">
+        <div>...</div>
+        <div>Login</div>
+      </article>
+    </section>
+    <nav>
+      <article>Home</article>
+      <article>Tech</article>
+      <article>Games</article>
+      <article>Podcasts</article>
+      <article>Books</article>
+      <article>Bots</article>
+      <article>Developer Tools</article>
+      <article>iMessage Apps</article>
+      <article>iPhone</article>
+      <article>Photograpy Tools</article>
+      <img src="./images/arrow-prev.png" alt="">
+      <img src="./images/arrow-next.png" alt="">
+    </nav>
+  </header>
+  <main></main>
+</body>
+
 </html>
