Avançem exercici lab-css

--- a/04_CSS/Lab-CSS/starter-code/index.html
+++ b/04_CSS/Lab-CSS/starter-code/index.html
@@ -22,7 +22,7 @@
         <div>Login</div>
       </article>
     </section>
-    <nav>
+    <nav class="conth-2">
       <article>Home</article>
       <article>Tech</article>
       <article>Games</article>
@@ -37,7 +37,15 @@
       <img src="./images/arrow-next.png" alt="">
     </nav>
   </header>
-  <main></main>
+  <main>
+    <section class="barm contm-1">
+      <article>👋Welcom to Bootcamp</article>
+      <article>Get all the news in your inbox, daily.</article>
+      <article>Your email</article>
+      <article>Subscribe</article>
+      <img src="./images/close.png" alt="">
+    </section>
+  </main>
 </body>
 
 </html>
