Tornem a començar el cos de lab-css

--- a/04_CSS/Lab-CSS/starter-code/index.html
+++ b/04_CSS/Lab-CSS/starter-code/index.html
@@ -39,11 +39,19 @@
   </header>
   <main>
     <section class="barm contm-1">
-      <article>👋Welcom to Bootcamp</article>
-      <article>Get all the news in your inbox, daily.</article>
-      <article>Your email</article>
-      <article>Subscribe</article>
-      <img src="./images/close.png" alt="">
+      <article class="boxm-1">👋Welcom to Bootcamp</article>
+      <article class="boxm-2">Get all the news in your inbox, daily.</article>
+      <article class="boxm-3">Your email</article>
+      <article class="boxm-4">Subscribe</article>
+      <img id="close" src="./images/close.png" alt="">
+    </section>
+    <section class="sidem-1">
+      <section class="sidem-2">
+        <article>KittyBot for Slack</article>
+        <img id="close" src="./images/close.png" alt="">
+      </section>
+      <article class="sidem-3">A friendly fleine that sends you cool new things.</article>
+      <article class="sidem-4">ADD KITTYBOT FOR SLACK</article>
     </section>
   </main>
 </body>
