Seguim treballant en el exercici lab-css

--- a/04_CSS/Lab-CSS/starter-code/index.html
+++ b/04_CSS/Lab-CSS/starter-code/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <section class="conth conth-1">
+    <section class="header-1 cont-1">
       <img id="logo" class="boxh" src="./images/logo.png" alt="">
       <article class="boxh boxh-1">
         <img src="./images/search.png" alt="">
@@ -22,7 +22,7 @@
         <div>Login</div>
       </article>
     </section>
-    <nav class="conth-2">
+    <nav class="header-2 cont-2">
       <article>Home</article>
       <article>Tech</article>
       <article>Games</article>
@@ -38,21 +38,28 @@
     </nav>
   </header>
   <main>
-    <section class="barm contm-1">
-      <article class="boxm-1">👋Welcom to Bootcamp</article>
-      <article class="boxm-2">Get all the news in your inbox, daily.</article>
-      <article class="boxm-3">Your email</article>
-      <article class="boxm-4">Subscribe</article>
+    <!-- Barra bienvenida -->
+    <section class="welcome welcome-1">
+      <article class="welcome-2">👋Welcom to Bootcamp</article>
+      <article class="welcome-3">Get all the news in your inbox, daily.</article>
+      <article class="welcome-4">Your email</article>
+      <article class="welcome-5">Subscribe</article>
       <img id="close" src="./images/close.png" alt="">
     </section>
-    <section class="sidem-1">
-      <section class="sidem-2">
+    <!-- Barra lateral -->
+    <section class="kitty-1">
+      <section class="kitty-2">
         <article>KittyBot for Slack</article>
         <img id="close" src="./images/close.png" alt="">
       </section>
-      <article class="sidem-3">A friendly fleine that sends you cool new things.</article>
-      <article class="sidem-4">ADD KITTYBOT FOR SLACK</article>
+      <article class="kitty-3">A friendly fleine that sends you cool new things.</article>
+      <article class="kitty-4">ADD KITTYBOT FOR SLACK</article>
     </section>
+    <section class="live-chat"></section>
+    <section class="tweets"></section>
+    <!-- Contenido principal -->
+    <section class="popular-week"></section>
+    <section class="today"></section>
   </main>
 </body>
 
