Continuem amb el exercici Lsb-CSS i afegim els retrats utilitzats

--- a/04_CSS/Lab-CSS/starter-code/index.html
+++ b/04_CSS/Lab-CSS/starter-code/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <header>
+    <!--Barra benvinguda i cerca-->
     <section class="header-1 cont-1">
       <img id="logo" class="boxh" src="./images/logo.png" alt="">
       <article class="boxh boxh-1">
@@ -22,6 +23,7 @@
         <div>Login</div>
       </article>
     </section>
+    <!--barra navegador-->
     <nav class="header-2 cont-2">
       <article>Home</article>
       <article>Tech</article>
@@ -47,6 +49,7 @@
       <img id="close" src="./images/close.png" alt="">
     </section>
     <!-- Barra lateral -->
+    <!-- Barra lateral bloc kitty-->
     <section class="kitty-1">
       <section class="kitty-2">
         <article>KittyBot for Slack</article>
@@ -55,7 +58,47 @@
       <article class="kitty-3">A friendly fleine that sends you cool new things.</article>
       <article class="kitty-4">ADD KITTYBOT FOR SLACK</article>
     </section>
-    <section class="live-chat"></section>
+    <!--Barra lateral block live chats-->
+    <section class="live-chat">
+      <article>
+        <h4 class="live-title">UPCOMING LIVE CHATS</h4>
+        <div class="separator"></div>
+      </article>
+      <article>
+        <img id="photo" src="./images/retrats/persona1.png" alt="">
+        <div>Lion El Jonson</div>
+        <div>VC at Deep Fork Capital</div>
+        <div>REMIND ME</div>
+      </article>
+      <article>
+        <img id="photo" src="./images/retrats/persona2.png" alt="">
+        <div>Rogal Dorn</div>
+        <div>Author of Emotionally Guilty</div>
+        <div>REMIND ME</div>
+      </article>
+      <article>
+        <img id="photo" src="./images/retrats/persona3.png" alt="">
+        <div>Robot Guilliman</div>
+        <div>General Partner at GV</div>
+        <div>REMIND ME</div>
+      </article>
+      <article>
+        <img id="photo" src="./images/retrats/persona4.png" alt="">
+        <div>Leman Russ</div>
+        <div>Founder and CEO of Ritul</div>
+        <div>REMIND ME</div>
+      </article>
+      <article>
+        <img id="photo" src="./images/retrats/persona5.png" alt="">
+        <div>Angel Sanguinius</div>
+        <div>Master of Productivity</div>
+        <div>REMIND ME</div>
+      </article>
+      <article>
+        <div class="separator"></div>
+        <div>SEE MORE</div>
+      </article>
+    </section>
     <section class="tweets"></section>
     <!-- Contenido principal -->
     <section class="popular-week"></section>
