--- a/04_CSS/Lab-CSS/starter-code/index.html
+++ b/04_CSS/Lab-CSS/starter-code/index.html
@@ -13,9 +13,9 @@
   <header>
     <!--Barra benvinguda i cerca-->
     <section class="header-1 cont-1">
-      <img id="logo" class="boxh" src="./images/logo.png" alt="">
+      <img id="logo" class="boxh" src="./images/logo.png" alt="" />
       <article class="boxh boxh-1">
-        <img src="./images/search.png" alt="">
+        <img src="./images/search.png" alt="" />
         <div>Discover your next facorite thing...</div>
       </article>
       <article class="boxh boxh-2">
@@ -23,7 +23,7 @@
         <div>Login</div>
       </article>
     </section>
-    <!--barra navegador-->
+    <!--Barra navegador-->
     <nav class="header-2 cont-2">
       <article>Home</article>
       <article>Tech</article>
@@ -35,71 +35,78 @@
       <article>iMessage Apps</article>
       <article>iPhone</article>
       <article>Photograpy Tools</article>
-      <img src="./images/arrow-prev.png" alt="">
-      <img src="./images/arrow-next.png" alt="">
+      <img src="./images/arrow-prev.png" alt="" />
+      <img src="./images/arrow-next.png" alt="" />
     </nav>
   </header>
   <main>
-    <!-- Barra bienvenida -->
+    <!--Barra bienvenida -->
     <section class="welcome welcome-1">
       <article class="welcome-2">👋Welcom to Bootcamp</article>
-      <article class="welcome-3">Get all the news in your inbox, daily.</article>
+      <article class="welcome-3">
+        Get all the news in your inbox, daily.
+      </article>
       <article class="welcome-4">Your email</article>
       <article class="welcome-5">Subscribe</article>
-      <img id="close" src="./images/close.png" alt="">
+      <img id="close" src="./images/close.png" alt="" />
     </section>
-    <!-- Barra lateral -->
-    <!-- Barra lateral bloc kitty-->
+    <!--Barra lateral -->
+    <!--Bloc kitty-->
     <section class="kitty-1">
       <section class="kitty-2">
         <article>KittyBot for Slack</article>
-        <img id="close" src="./images/close.png" alt="">
+        <img id="close" src="./images/close.png" alt="" />
       </section>
-      <article class="kitty-3">A friendly fleine that sends you cool new things.</article>
-      <article class="kitty-4">ADD KITTYBOT FOR SLACK</article>
+      <article class="kitty-3">
+        A friendly fleine that sends you cool new things.
+      </article>
+      <button class="kitty-4">ADD KITTYBOT FOR SLACK</button>
     </section>
-    <!--Barra lateral block live chats-->
+    <!--Bloc live-chats-->
     <section class="live-chat">
       <article>
         <h4 class="live-title">UPCOMING LIVE CHATS</h4>
         <div class="separator"></div>
       </article>
-      <article>
-        <img id="photo" src="./images/retrats/persona1.png" alt="">
-        <div>Lion El Jonson</div>
-        <div>VC at Deep Fork Capital</div>
-        <div>REMIND ME</div>
+      <article class="live-box">
+        <img id="photo" src="./images/retrats/persona1.png" alt="" />
+        <div class="live-name">Lion El Jonson</div>
+        <div class="live-job">VC at Deep Fork Capital</div>
+        <button id="remind">REMIND ME</button>
       </article>
-      <article>
-        <img id="photo" src="./images/retrats/persona2.png" alt="">
-        <div>Rogal Dorn</div>
-        <div>Author of Emotionally Guilty</div>
-        <div>REMIND ME</div>
+      <article class="live-box">
+        <img id="photo" src="./images/retrats/persona2.png" alt="" />
+        <div class="live-name">Rogal Dorn</div>
+        <div class="live-job">Author of Emotion Guilty</div>
+        <button id="remind">REMIND ME</button>
       </article>
-      <article>
-        <img id="photo" src="./images/retrats/persona3.png" alt="">
-        <div>Robot Guilliman</div>
-        <div>General Partner at GV</div>
-        <div>REMIND ME</div>
+      <article class="live-box">
+        <img id="photo" src="./images/retrats/persona3.png" alt="" />
+        <div class="live-name">Robot Guilliman</div>
+        <div class="live-job">General Partner at GV</div>
+        <button id="remind">REMIND ME</button>
       </article>
-      <article>
-        <img id="photo" src="./images/retrats/persona4.png" alt="">
-        <div>Leman Russ</div>
-        <div>Founder and CEO of Ritul</div>
-        <div>REMIND ME</div>
+      <article class="live-box">
+        <img id="photo" src="./images/retrats/persona4.png" alt="" />
+        <div class="live-name">Leman Russ</div>
+        <div class="live-job">Founder and CEO of Ritul</div>
+        <button id="remind">REMIND ME</button>
       </article>
-      <article>
-        <img id="photo" src="./images/retrats/persona5.png" alt="">
-        <div>Angel Sanguinius</div>
-        <div>Master of Productivity</div>
-        <div>REMIND ME</div>
+      <article class="live-box">
+        <img id="photo" src="./images/retrats/persona5.png" alt="" />
+        <div class="live-name">Angel Sanguinius</div>
+        <div class="live-job">Master of Productivity</div>
+        <button id="remind">REMIND ME</button>
       </article>
-      <article>
+      <article class="live-container">
         <div class="separator"></div>
-        <div>SEE MORE</div>
+        <button class="live-more">SEE MORE</button>
       </article>
     </section>
-    <section class="tweets"></section>
+    <!--Bloc tweets-->
+    <section class="tweets">
+      
+    </section>
     <!-- Contenido principal -->
     <section class="popular-week"></section>
     <section class="today"></section>
