Afegim bloc tweets

--- a/04_CSS/Lab-CSS/starter-code/index.html
+++ b/04_CSS/Lab-CSS/starter-code/index.html
@@ -105,7 +105,10 @@
     </section>
     <!--Bloc tweets-->
     <section class="tweets">
-      
+      <div class="tweets-title">Tweets</div>
+      <div class="tweets-liked">liked by</div>
+      <a class="tweets-link" href="https://x.com/producthunt?lang=es" target="_blank">@ProductHuntLOVE</a>
+      <div class="separator"></div>
     </section>
     <!-- Contenido principal -->
     <section class="popular-week"></section>
