Afegim bloc principal popular week, seguir treballant

--- a/04_CSS/Lab-CSS/starter-code/index.html
+++ b/04_CSS/Lab-CSS/starter-code/index.html
@@ -111,7 +111,49 @@
       <div class="separator"></div>
     </section>
     <!-- Contenido principal -->
-    <section class="popular-week"></section>
+    <section class="popular-week">
+      <article>
+        <div class="popular-title">Popular this week</div>
+        <img src="./images/close.png" alt="">
+      </article>
+      <div class="popular-separator"></div>
+      <section class="popular-grid">
+        <img src="./images/today/popular-this-week/app-1.png" alt="">
+        <img src="./images/today/popular-this-week/app-2.png" alt="">
+        <img src="./images/today/popular-this-week/app-3.png" alt="">
+        <article>
+          <div>Duolingo Bots</div>
+          <div>AI-powered characters to teach language conversation</div>
+          <div><img src="./images/votes.png" alt="">1460</div>
+          <div><img src="./images/comments.png" alt="">49</div>
+        </article>
+        <article>
+          <div>Tribe 2.0</div>
+          <div>Introducing Augmentated Messaging</div>
+          <div><img src="./images/votes.png" alt="">1465</div>
+          <div><img src="./images/comments.png" alt="">188</div>
+          <div>🏆 #1 IN TECH</div>
+        </article>
+        <article>
+          <div>Workplace by Facebook</div>
+          <div>Connect everyone in your company and turn ideas into actions</div>
+          <div><img src="./images/votes.png" alt="">1460</div>
+          <div><img src="./images/comments.png" alt="">49</div>
+        </article>
+        <article>
+          <div>IPHONE</div>
+          <div>+2</div>
+        </article>
+        <article>
+          <div>ANDROID</div>
+          <div>+4</div>
+        </article>
+        <article>
+          <div>ANDROID</div>
+          <div>+2</div>
+        </article>
+      </section>
+    </section>
     <section class="today"></section>
   </main>
 </body>
