Exercici cartes, millor transicio mes suau

--- a/05_JavaScript_JQuerry/Carta/index.html
+++ b/05_JavaScript_JQuerry/Carta/index.html
@@ -9,13 +9,17 @@
 </head>
 
 <body>
-    <section>
-        <img class="back" src="./card-back.png" alt="">
-        <img class="front" src="./card-front.png" alt="">
+    <section class="card">
+        <div class="card-inner">
+            <img class="back card-back" src="./card-back.png" alt="">
+            <img class="front card-front" src="./card-front.png" alt="">
+        </div>
     </section>
-    <section>
-        <img class="back" src="./card-back.png" alt="">
-        <img class="front" src="./card-front.png" alt="">
+    <section class="card">
+        <div class="card-inner">
+            <img class="back card-back" src="./card-back.png" alt="">
+            <img class="front card-front" src="./card-front.png" alt="">
+        </div>
     </section>
     <script type="module" src="./main.js"></script>
 </body>
