--- a/05_JavaScript_JQuerry/Bombilla/index.html
+++ b/05_JavaScript_JQuerry/Bombilla/index.html
@@ -12,7 +12,7 @@
         <img src="./images/on.jpg" alt="" class="bulb bulb-on">
     </section>
     <section>
-        <article>
+        <article class="switch-container">
             <h2>Interruptor</h2>
             <img src="./images/boff.jpg" alt="" class="switch switch-off">
             <img src="./images/bon.jpg" alt="" class="switch switch-on">
@@ -23,11 +23,11 @@
         </article>
         <article>
             <h2>Tamany de la llum</h2>
-            <input class="slider" type="range" id="size" name="size" min="0" max="500" value="500">
+            <input class="slider" type="range" id="size" name="size" min="0" max="450" value="450">
         </article>
         <article>
             <h2>Rotació de la llum</h2>
-            <input class="slider" type="range" id="rotation" name="rotation" min="0" max="100" value="100">
+            <input class="slider" type="range" id="rotation" name="rotation" min="0" max="360" value="360">
         </article>
     </section>
     <script type="module" src="./main.js"></script>
