Acabada la calculadora

--- a/05_JavaScript_JQuerry/Calculadora/index.html
+++ b/05_JavaScript_JQuerry/Calculadora/index.html
@@ -45,7 +45,7 @@
         <button id="coma" class="button">.</button>
         <button id="igual" class="button igual">=</button>
         <button id="delete" class="button special">DEL</button>
-        <button id="reset" class="button tspecial">RESET</button>
+        <button id="reset" class="button special">RESET</button>
       </section>
     </main>
     <script type="module" src="./main.js"></script>
