Exercici order apartat C fet

--- a/06_Bootstrap/Table/index.html
+++ b/06_Bootstrap/Table/index.html
@@ -106,7 +106,7 @@
                 <td>@Danger</td>
         </tbody>
     </table>
-    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
