--- a/06_Bootstrap/Order/Apartat_C/index.html
+++ b/06_Bootstrap/Order/Apartat_C/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-3 bg-warning border border-1 border-dark">col-1</div>
+            <div class="col-3 offset-3 bg-warning border border-1 border-dark">col-2</div>
+            <div class="col-3 bg-warning border border-1 border-dark">col-3</div>
+        </div>
+        <div class="row">
+            <div class="col-3 offset-3 bg-warning border border-1 border-dark">col-4</div>
+            <div class="col-3 offset-3 bg-warning border border-1 border-dark">col-5</div>
+        </div>
+    </div>
 </body>
 </html>
